tests/bad/frontendErrors/multipleFieldDeclaration.latte
int main() {return 0;}

class C {
    int a;
    int a;
}